# anima-flow

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/skills/conventional-commit/: SKILL.md
crates/anima-brain/: Cargo.toml
crates/anima-brain/src/: client.rs  lib.rs  prompt.rs
crates/anima-connectors/: Cargo.toml
crates/anima-connectors/src/: calendar.rs  chatwork.rs  gmail.rs  lib.rs  linear.rs  slack.rs  todoist.rs  traits.rs
crates/anima-context/: Cargo.toml
crates/anima-context/src/: assembly.rs  cue.rs  direct.rs  lib.rs  pipeline.rs  scoring.rs  semantic.rs  spread.rs
crates/anima-core/: Cargo.toml
crates/anima-core/src/: config.rs  error.rs  id.rs  lib.rs  types.rs
crates/anima-cortex/: Cargo.toml
crates/anima-cortex/src/: graph.rs  lib.rs  query.rs  repo.rs
crates/anima-gateway/: Cargo.toml
crates/anima-gateway/src/: cli.rs  lib.rs  traits.rs
crates/anima-heartbeat/: Cargo.toml
crates/anima-heartbeat/src/: scheduler.rs
crates/anima-skills/: Cargo.toml
crates/anima-skills/src/: breakdown.rs  briefing.rs  inbox.rs  lib.rs  morning.rs  review.rs  traits.rs
docs/: architecture.md  connectors.md  context-engine.md  context-space.md  cortex.md  index.md  roadmap.md  vision.md  workflows.md
migrations/: 0002_create_nodes.sql  0003_create_edges.sql  0004_create_indexes.sql
src/: main.rs
