[package]
name = "anima-skills"
version = "0.1.0"
edition = "2024"

[dependencies]
anima-core.workspace = true
anima-cortex.workspace = true
anima-context.workspace = true
anima-brain.workspace = true
anima-connectors.workspace = true
anima-gateway.workspace = true
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
